# redseen

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
demos/particles/: CMakeLists.txt  bullet.cc  bullet.hh  config.hh  editor.hh  main.cc
lib/include/glad/: glad.h
lib/src/: glad.c
src/: CMakeLists.txt
src/app/: app.cc  app.hh  bullet.cc  bullet.hh  config.hh  main.cc  test_ui_window.cc  vertex_shader.glsl
src/common/: defaultmove.hh  downcast_helper.hh  noncopyable.hh  weak_ptr.hh
src/engine/: camera.cc  camera.hh  editor.hh  engine.cc  engine.hh  event.hh  event_dispatcher.cc  event_dispatcher.hh  event_loop.cc  event_loop.hh  event_observer.hh  event_producer.hh  event_producer_container.cc  event_producer_container.hh  geometry.hh  mesh_factory.hh  model.hh  object_manager.cc  object_manager.hh  renderer.cc  renderer.hh  texture_key.hh  texture_manager.cc  texture_manager.hh
src/engine/mesh_factories/: sphere_mesh_factory.cc  sphere_mesh_factory.hh
src/engine/model/: opengl_model.cc  opengl_model.hh
src/engine/object/: basic_object.cc  basic_object.hh  object.hh
src/engine/renderers/: opengl_renderer.cc  opengl_renderer.hh
src/render/: drawer.cc  drawer.hh  font.cc  font.hh  mesh.cc  mesh.hh  mesh_renderer.cc  mesh_renderer.hh  mesh_shaders.hh  model.cc  model.hh  opengl_drawer.cc  opengl_drawer.hh  opengl_mesh_handle.cc  opengl_mesh_handle.hh  shader.cc  shader.hh  text.cc  text.hh  text_fragment.glsl  text_impl.cc  text_impl.hh  text_mesh.cc  text_mesh.hh  text_renderer.cc  text_renderer.hh  text_shaders.hh  text_vertex.glsl  texture.cc  texture.hh  texture_drawer.cc  texture_drawer.hh  textureview.hh
src/ui/: drawer_stub.hh  window.cc  window.hh  window_config.hh  window_event.hh  window_event_loop.cc  window_event_loop.hh  window_impl.hh
